# minisign-rs

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: constants.rs  errors.rs  keypair.rs  lib.rs  public_key.rs  secret_key.rs  signature.rs  util.rs
tests/: minisign_compat.rs
